Fix header styling on mobile

--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ body {
     font-weight: 100;
 }
 
-@media(max-width: 600px) {
+@media(max-width: 650px) {
     .header {
         height: 70px;
     }
